# KeyBot

./: .dockerignore  Dockerfile  README.md  compose.yaml  dev.yaml  pyproject.toml
Docker/: start
KeyBot/: database.py
KeyBot/models/: keys.py
KeyBot/plugins/: core.py  keys.py
config/: config.yaml  interactions.yaml
